--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./app.css" />
     <title>Document</title>
-</head>
-<body>
-    <canvas id="canvas"></canvas>
-    
-
-
-
-
-
-
-
+  </head>
+  <body>
+    <div class="audio">
+        <audio controls>
+            <source src="../file/bell.ogg" type="audio/ogg">
+            <source src="./music/Tieng-phao-hoa-no-tren-bau-troi-www_tiengdong_com.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+    <div class="canvas">
+      <canvas id="canvas"></canvas>
+    </div>
 
     <script src="./study.js"></script>
-</body>
+  </body>
 </html>
